# Compi5

./: .gitignore  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Makefile  Parser.cpp  Parser.h  Utils.cpp  Utils.h  bp.cpp  lexer.cpp  parser.h  parser.output  parser.tab.cpp  parser.tab.hpp  parser.ypp  scanner.lex  selfcheck-hw5  source.hpp  tests.sh
my_tests/: test1  test1.in  test2  test3  test4  test5  testj  אא
old_work/: Entry.h  Scope.h  codeGenerator.hpp  parser.hpp  parser.ypp  regAlloc.hpp  scanner.lex  symbolTable.hpp  utilFuncs.hpp
parser/: CodeGenerator.cpp  CodeGenerator.h  MipsWrapper.cpp  MipsWrapper.h  Parser.cpp  Parser.h  Utils.h
staff tests/: t3.in
tests/: test24.in
tests/prev/: test71.in
tests/staff/: t1.in  t2.in
tests/suite/: t1.in  t1.out  t2.in  t2.out  t3.in  t3.out
